[package]
name = "kubectl-explore"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.99", default-features = true, features = ["derive"] }
kube-derive = "0.99"
k8s-openapi = { version = "0.24", default-features = false, features = [
    "v1_32",
] }
futures = "0.3"
regex = "1"
thiserror = "2"
clap = "4.2"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
rayon = "1"

[dev-dependencies]
base64 = "0.22"
